additions and remove composer page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Patrick Johns</title>
 </head>
 
@@ -32,9 +33,8 @@
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="drop dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
-            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
-            <a class="drop dropdown-item" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="producer.html">Presenter & Producer</a>
+            <a class="drop dropdown-item" href="performer.html">Musician</a>
             <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
@@ -79,7 +79,7 @@
           <li>Performing across the globe with numerous bands and orchestras </li>
           <li>Writing numerous arrangements for choirs, brass groups and orchestras </li>
           <li>Writing numerous educational resources</li>
-          <li>Writing and starring in a 5* sell-out comedy show for the Edinburgh Fring </li>
+          <li>Writing and starring in a 5* sell-out comedy show for the Edinburgh Fringe </li>
         </ul>
 
 
@@ -94,9 +94,7 @@
 
 
         <div class='btn-group port-btns'>
-          <a class="btn btn-outline-secondary" href="producer.html">Producer<i
-              class="fas fa-angle-double-right"></i></a>
-          <a class="btn btn-outline-secondary" href="composer.html">Composer<i
+          <a class="btn btn-outline-secondary" href="producer.html">Presenter & Producer<i
               class="fas fa-angle-double-right"></i></a>
           <a class="btn btn-outline-secondary" href="performer.html">Performer<i
               class="fas fa-angle-double-right"></i></a>
@@ -114,6 +112,9 @@
     <div class='footer'>
       <div>
         <ul class='icon-list'>
+          <li><a href="https://twitter.com/MrPatrickJohns" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/patrickjohnsmusic/" target="_blank"><i
+                class="fab fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i
                 class="fab fa-linkedin"></i></a></li>
           <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
