--- a/performer.html
+++ b/performer.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
-  <title>Patrick Johns | Performer</title>
+  <title>Patrick Johns | Musician</title>
 </head>
 
 <body>
   <nav class="mynav navbar navbar-expand-lg navbar-dark">
     <a class="logo navbar-brand" href="index.html">PJ</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -25,13 +27,13 @@
         </li>
 
         <li class="nav-item active dropdown">
-          <a class="mynav-link nav-link dropdown-toggle" href="£" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="mynav-link nav-link dropdown-toggle" href="£" id="navbarDropdown" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="drop dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
-            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
-            <a class="drop dropdown-item active" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="producer.html">Presenter & Producer</a>
+            <a class="drop dropdown-item active" href="performer.html">Musician</a>
             <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
@@ -47,75 +49,172 @@
     <article>
       <div class="container jumbo-text text-center">
 
-        <h2 class="section-title">Performer</h2>
+        <h2 class="section-title">Musician</h2>
 
       </div>
     </article>
   </header>
   <section>
+    <div class="container">
+      <p class='intro-text producer-text mx-auto'>
+        Patrick is very active as a music arranger, in many different styles, and his arrangements have been heard on
+        BBC 1, ITV and Channel 4, as well as Radios 1, 2, 3, 4, 5 and 6, and in major London venues such as the Royal
+        Festival Hall.
+      </p>
+      <div class="row">
+        <div class="col text-center">
+          <h2 class="subtitle text-center mt-4 mb-4">Arranging</h2>
+          <ul class="plain-ul">
+            <li>
+              Large Brass Ensemble: soon to be published by Superbrass Publishing
+            </li>
+            <li>
+              Children’s voices: arrangements for young voices published by Sing Up
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=3zDd49mrBfU">Orchestra: in 2017, Patrick orchestrated 20 Elvis
+                Presley songs, for “Symphonic Elvis” concerts given by the world’s no.1 Elvis tribute, Gordon Hendricks
+              </a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=Jdobowvu12I">
+                Orchestra: in 2014, Patrick arranged and performed an orchestral version of Bohemian Rhapsody with
+                Rainer Hersch, the London Firebird Orchestra, and the Crouch End Festival Chorus, at the Royal Festival
+                Hall.
+              </a>
+            </li>
+            <li>
+              Choir: Last Choir Standing (BBC 1); The Mad Bad Ad Show (Channel 4)
+            </li>
+            <li>
+              Transcribing
+              <a
+                href="https://www.sheetmusicplus.com/title/africa-toto-full-transcription-eduqas-gcse-music-digital-sheet-music/21939852">Africa
+              </a>
+              (by Toto), and <a
+                href="https://www.sheetmusicplus.com/title/since-you-been-gone-since-you-ve-been-gone-rainbow-eduqas-gcse-music-digital-sheet-music/21147593">Since
+                You Been Gone</a> (recorded by Rainbow) for use as educational resources </a>
+            </li>
+          </ul>
+          <hr class="col-hr mt-4">
+        </div>
+
+      </div>
+      <div class="card-col mx-auto text-center">
+        <div class="card card-width quote-card  mx-auto">
+          <div class="card-body">
+            <blockquote class="card-title">
+
+              “What an absolute pleasure it was to conduct Patrick’s arrangement of Bohemian Rhapsody for orchestra and
+              Oompah Brass. It raised the roof at the Festival Hall. Classy fun. Absolutely brilliant.”</blockquote>
+            <cite class="card-text">Rainer Hersch, comedian and conductor</cite>
+
+          </div>
+        </div>
+
+        <div class="card card-width quote-card mx-auto">
+          <div class="card-body">
+            <blockquote class="card-title">“Patrick Johns’ arrangements deserve their own stars, as does his
+              accomplished trombone playing.”</blockquote>
+            <cite class="card-text">Kate Copstick, The Scotsman</cite>
+
+          </div>
+        </div>
+      </div>
+
+      <hr class="col-hr mt-4">
+
+      <div class='col port-content mx-auto'>
+
+        <h4 class='small-title'>Recent compositions include:</h4>
+        <ul class='comp-list'>
+          <li><strong>Mary Speaks:</strong> a cappella carol for SSA or TTB</li>
+          <li><strong>In the Bleak Midwinter: </strong>carol for SA and piano</li>
+          <li><strong>We Will Remember Them:</strong> Remembrance Day piece for SATB and orchestra (premiered in
+            November 2018 at Bristol Cathedral’s Festival of Remembrance)</li>
+          <li><strong>September Groove:</strong> for brass band (written for the charity <a
+              href="http://brassforafrica.org/">Brass for Africa</a>)</li>
+        </ul>
+        <div class='text-center sound'>
+          <iframe scrolling="no" frameborder="no" allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/743272176&color=%233c3630&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+
+        </div>
+        <div class='text-center'>
+          <a href="https://www.sheetmusicplus.com/publishers/patrick-johns-sheet-music/3010139?isPLP=1"
+            class="comp-btn btn btn-lg btn-outline-light"><i class="fas fa-music mr-3"></i>Buy Patrick's Music</a>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
     <div class='container-fluid biog-section'>
       <div class='row'>
         <div class="col-md-5 text-center">
-          <img class='perf-img' src="assets/images/pinktrb.jpg"/>
+          <img class='perf-img' src="assets/images/pinktrb.jpg" />
 
-          </div>
+        </div>
 
         <div class='col-md-7'>
 
 
 
-            <p class='intro-text mx-auto perf-text'>
-              Patrick has been a professional trombonist for 20 years, playing in a wide variety of ensemble, either as a regular member or as a guest, including:
-            </p>
+          <p class='intro-text mx-auto perf-text'>
+            Patrick has been a professional trombonist for 20 years, playing in a wide variety of ensemble, either as a
+            regular member or as a guest, including:
+          </p>
 
 
 
-            <ul class='comp-list'>
-              <li><a class='text-link' href='http://oompahbrass.com'>Oompah Brass</a>, the UK’s leading Oktoberfest band and exponents of Oompop</li>
-              <li>Big-name acts such as Michael Ball, Robert Lindsay and Emma Thompson</li>
-              <li>Bands such as Chas ’n’ Dave and Hayseed Dixie</li>
-              <li>The Noblemen and Gentlemen’s Catch Club</li>
-              <li>Orchestras, including the Symphony Orchestra of India</li>
-              <li>Ska acts, including Prince Buster and The Dualers (including two top 25 hits)</li>
-              <li>London Vegetable Orchestra, playing 1st Butternut Squash</li>
-            </ul>
-
-            <p class='intro-text mx-auto mt-4'>
-              Patrick has performed at all the main London jazz and classical venues, and at many UK festivals such at Bestival, Isle of Wight Festival and the London Jazz Festival.
-              <br /><br />
-              TV work includes Odd One In (ITV), Mad Bad Ad Show (Channel 4), whilst advertising work includes H&M (with Tony Bennett and Lady Gaga), Johnnie Walker (with Jude Law), and Victim Support (national campaign).
-              <br /><br />
-              Patrick starred in two 5* sell-out shows at the Edinburgh Fringe: “The A to Z of Oompah”, and “Blow Up! The Credit Crunch Musical”, which won praise across the regional and national press.
-              <br /><br />
-              He also gigs (less frequently!) on bass guitar, drums, tuba and guitar (his singing days are mostly behind him).
-            </p>
-
-            <div class='btn-group port-btns'>
-              <a class="btn btn-outline-secondary" href="producer.html">Producer<i class="fas fa-angle-double-right"></i></a>
-              <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
-              <a class="disabled mydisabled btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
-              <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
-            </div>
+          <ul class='comp-list'>
+            <li><a href='http://oompahbrass.com'>Oompah Brass</a>, the UK’s leading Oktoberfest band and leading
+              exponents of Oompop, including two 5* sell-out shows at the Edinburgh Fringe </li>
+            <li><a href="https://www.londonvegetableorchestra.com">London Vegetable Orchestra, playing 1st Butternut
+                Squash, as recently seen on Ant and Dec’s Saturday Night Takeaway</a></li>
+            <li>Prince Buster (guest)</li>
+            <li><a href="https://www.youtube.com/watch?v=EYBBc-AjRAI">Chas ’n’ Dave (guest)</a></li>
+            <li>Hayseed Dixie (guest)</li>
+            <li>The Noblemen and Gentlemen’s Catch Club (professional member) </li>
+            <li>The Symphony Orchestra of India (principal trombone)</li>
+            <li>The Dualers (including two top 25 hits) </li>
+          </ul>
 
 
+
+          <div class='btn-group port-btns'>
+            <a class="btn btn-outline-secondary" href="producer.html">Presenter & Producer<i
+                class="fas fa-angle-double-right"></i></a>
+            <a class="disabled mydisabled btn btn-outline-secondary" href="performer.html">Musician<i
+                class="fas fa-angle-double-right"></i></a>
+            <a class="btn btn-outline-secondary" href="educator.html">Educator<i
+                class="fas fa-angle-double-right"></i></a>
           </div>
 
 
         </div>
-        <div class='row'>
-          <div class='col text-center'>
-              <img class='band-img' src="assets/images/oktoberfest.jpg"/>
-            </div>
 
-          </div>
+
       </div>
+      <div class='row'>
+        <div class='col text-center'>
+          <img class='band-img' src="assets/images/oktoberfest.jpg" />
+        </div>
+
+      </div>
+    </div>
   </section>
 
   <footer>
     <div class='footer'>
       <div>
         <ul class='icon-list'>
-          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+          <li><a href="https://twitter.com/MrPatrickJohns" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/patrickjohnsmusic/" target="_blank"><i
+                class="fab fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i
+                class="fab fa-linkedin"></i></a></li>
           <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
           <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
         </ul>
@@ -127,9 +226,15 @@
     </div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
 
