--- a/producer.html
+++ b/producer.html
@@ -33,8 +33,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="drop dropdown-item active" href="producer.html">Presenter & Producer</a>
-            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
-            <a class="drop dropdown-item" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="performer.html">Musician</a>
             <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
@@ -58,9 +57,8 @@
   <section>
     <div class="container">
       <p class='intro-text producer-text mx-auto'>Patrick has worked as a freelance Radio Presenter and Producer since
-        2007,
-        before which he worked in production across programmes such as Jazz Record Requests,
-        In Tune, Voices, Hear & Now, and Late Junction. </p>
+        2007, before which he worked in production at BBC Radio 3 across programmes such as Jazz Record Requests, In
+        Tune, Voices, Hear & Now, and Late Junction.</p>
 
 
       <div class="row">
@@ -76,25 +74,26 @@
         <div class="col col-md-7">
           <h2 class="subtitle mt-4">Podcast</h2>
           <p class='intro-text mx-auto perf-text'>
-            Patrick currently presents and produces the UK’s no.1 Music Education podcast, <a href="https://www.musicteachers.org/podcast 
-
-            https://open.spotify.com/show/5dG4k0lPLLB3isiJVMPtU2?si=B0cHJ6UzTMar_O_YEc-QFA ">Teaching Notes</a>, having
+            Patrick currently presents and produces the UK’s no.1 Music Education podcast, <a
+              href="https://www.musicteachers.org/podcast">Teaching Notes</a>, having
             interviewed over 100 musicians and educators, including Julian Lloyd Webber, John Rutter, Katie Melua, Guy
             Chambers, Nicola Benedetti, Ruthie Henshall, Bob Chilcott, Dick Hyman, Ron Carter, and Steve Hackett.
             <br />
-            Available on Apple, Spotify, Buzzsprout, and more.
+            Available on Apple, <a
+              href="https://open.spotify.com/show/5dG4k0lPLLB3isiJVMPtU2?si=B0cHJ6UzTMar_O_YEc-QFA">Spotify</a>,
+            Buzzsprout, and more.
           </p>
         </div>
       </div>
 
-
+      <hr class="col-hr">
     </div>
 
   </section>
   <div class="container">
     <div class="row">
-      <div class="col col-md-6">
-        <div class="card quote-card">
+      <div class="card-col mx-auto text-center">
+        <div class="card card-width quote-card">
           <div class="card-body">
             <blockquote class="card-title">“Patrick brings music education to life in his podcasts. He allows us to
               listen
@@ -106,28 +105,33 @@
 
           </div>
         </div>
-      </div>
-      <div class="col col-md-6">
-        <div class="card quote-card">
+
+        <div class="card card-width quote-card">
           <div class="card-body">
-            <blockquote class="card-title">“Patrick is rare gem in world of music: an excellent communicator, dedicated
+            <blockquote class="card-title">“Patrick is rare gem in world of music: an excellent communicator,
+              dedicated
               educator and exceptional musician. His passion for all things musical shines through his work.”
             </blockquote>
             <cite class="card-text">Catherine Barker, Head of Music and Performing Arts, United Learning</cite>
 
           </div>
         </div>
+
       </div>
+
+
+
     </div>
 
-    <div class="row">
-      <div class="col text-center">
+    <div class="row mt-4">
+      <div class="col text-center ">
+        <hr class="col-hr">
         <h2 class="subtitle text-center">Presenter credits include:</h2>
 
 
         <p class="lead mt-4">ABC Overnights (Australia) (2018–): UK Correspondent</p>
         <audio controls>
-          <source src="assets/mp3/jazz-night.mp3" type="audio/mpeg">
+          <source src="assets/mp3/abc.mp3" type="audio/mpeg">
         </audio>
         <hr class="col-hr">
         <p class="lead mt-4">Scala Radio: Sunday Brunch (2020–21), presenting the “What Happened Next?” feature </p>
@@ -155,7 +159,8 @@
         <h2 class="subtitle text-center mt-4 mb-4">Producer credits include:</h2>
         <ul class="plain-ul">
           <li>
-            <a href="https://www.bbc.co.uk/programmes/b006tmr6">BBC Radio 3: Breakfast (2021–), with Petroc Trelawny</a>
+            <a href="https://www.bbc.co.uk/programmes/b006tmr6">BBC Radio 3: Breakfast (2021–), with Petroc
+              Trelawny</a>
 
           </li>
           <li>
@@ -169,11 +174,13 @@
               Morrison</a>
           </li>
           <li>
-            <a href="https://www.bbc.co.uk/programmes/b06rf20z">BBC Radio 2: Baylen Leonard’s Country Christmas (2015),
+            <a href="https://www.bbc.co.uk/programmes/b06rf20z">BBC Radio 2: Baylen Leonard’s Country Christmas
+              (2015),
               with Baylen Leonard </a>
           </li>
           <li>
-            <a href="https://www.bbc.co.uk/programmes/b00v4plq">BBC Radio 2: Jazz Junctions (2010), with Guy Barker</a>
+            <a href="https://www.bbc.co.uk/programmes/b00v4plq">BBC Radio 2: Jazz Junctions (2010), with Guy
+              Barker</a>
           </li>
           <li>
             <a href="https://www.youtube.com/watch?v=ZA35XAm7Nps">
@@ -191,6 +198,7 @@
             </a>
           </li>
         </ul>
+        <hr class="col-hr">
       </div>
     </div>
 
@@ -205,7 +213,6 @@
         </div>
       </div>
 
-
       <div class="card card-width quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Patrick brings a wealth of production and music knowledge into the studio,
@@ -218,18 +225,6 @@
         </div>
       </div>
 
-
-
-      <div class="card card-width quote-card">
-        <div class="card-body">
-          <blockquote class="card-title">“Speaking as a presenter, Patrick instils within you the confidence to shine.
-            His diligent research, inherent knowledge and personality are a studio gift.” </blockquote>
-          <cite class="card-text">Anthea Turner, TV and Radio presenter</cite>
-
-        </div>
-      </div>
-
-
       <div class="card card-width  quote-card">
         <div class="card-body">
           <blockquote class="card-title">“Patrick brought a real understanding and knowledge of each project we worked
@@ -238,7 +233,6 @@
           <cite class="card-text">Baylen Leonard, TV and Radio presenter </cite>
         </div>
       </div>
-
 
 
       <div class="card card-width  quote-card">
@@ -250,7 +244,22 @@
 
         </div>
       </div>
+      <div class="card card-width  quote-card">
+        <div class="card-body">
+          <blockquote class="card-title">"I've worked with Patrick for more years than he'd like me to count, and it's
+            always been a joy. His roots are in music (about which he knows a huge amount), but he also has an ability
+            to produce and edit pretty-well any programme I throw at him. His does this with aplomb, with his eyes
+            always on the detail, with a spring in his step, and with the sort of high-level imagination and
+            efficiency
+            -
+            always achieving great results. He's an asset to any indie. I cannot recommend him to you, however,
+            because
+            then he'd be working for you. And since you're the competition, that simply won't do."</blockquote>
+          <cite class="card-text">Victor Lewis-Smith, TV Producer and Critic</cite>
 
+        </div>
+      </div>
+      <hr class="col-hr">
 
     </div>
 
@@ -263,10 +272,10 @@
     <p class='intro-text producer-text mx-auto'>
       As a musician, Patrick has been interviewed on live radio by many of the UK’s top presenters, including Chris
       Evans, Danny Baker, Sean Keaveny, and Stuart Maconie.
-      <hr class="col-hr" />
 
 
-    <div class='port-item text-center'>
+
+    <div class='port-item text-cente mb-4r'>
       <img class='port-img' src="https://ichef.bbci.co.uk/images/ic/720x405/p06k4r38.jpg" />
       <audio controls>
         <source src="assets/mp3/chris-evans.mp3" type="audio/mpeg">
@@ -289,14 +298,14 @@
 
       </ul>
     </div>
+    <hr class="col-hr mt-4">
 
 
 
     <div class='btn-group port-btns'>
-      <a class="disabled mydisabled btn btn-outline-secondary" href="producer.html">Producer<i
+      <a class="disabled mydisabled btn btn-outline-secondary" href="producer.html">Presenter & Producer<i
           class="fas fa-angle-double-right"></i></a>
-      <a class="btn btn-outline-secondary" href="composer.html">Composer<i class="fas fa-angle-double-right"></i></a>
-      <a class="btn btn-outline-secondary" href="performer.html">Performer<i class="fas fa-angle-double-right"></i></a>
+      <a class="btn btn-outline-secondary" href="performer.html">Musician<i class="fas fa-angle-double-right"></i></a>
       <a class="btn btn-outline-secondary" href="educator.html">Educator<i class="fas fa-angle-double-right"></i></a>
     </div>
 
@@ -314,6 +323,9 @@
     <div class='footer'>
       <div>
         <ul class='icon-list'>
+          <li><a href="https://twitter.com/MrPatrickJohns" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="https://www.instagram.com/patrickjohnsmusic/" target="_blank"><i
+                class="fab fa-instagram"></i></a></li>
           <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i
                 class="fab fa-linkedin"></i></a></li>
           <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
