--- a/contact.html
+++ b/contact.html
@@ -5,22 +5,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/style.css">
   <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script type="text/javascript">
-        (function() {
-            emailjs.init("user_OFdAhUR3QErMz82Ms1R7B");
-        })();
-    </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("user_OFdAhUR3QErMz82Ms1R7B");
+    })();
+  </script>
   <title>Patrick Johns | Performer</title>
 </head>
 
 <body>
   <nav class="mynav navbar navbar-expand-lg navbar-dark">
     <a class="logo navbar-brand" href="index.html">PJ</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -31,19 +33,19 @@
         </li>
 
         <li class="nav-item active dropdown">
-          <a class="mynav-link nav-link dropdown-toggle" href="£" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="mynav-link nav-link dropdown-toggle" href="£" id="navbarDropdown" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Portfolio
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="drop dropdown-item" href="producer.html">Producer - Writer - Presenter</a>
-            <a class="drop dropdown-item" href="composer.html">Arranger - Composer</a>
-            <a class="drop dropdown-item active" href="performer.html">Performer</a>
+            <a class="drop dropdown-item" href="producer.html">Presenter & Producer</a>
+            <a class="drop dropdown-item" href="performer.html">Musician</a>
             <a class="drop dropdown-item" href="educator.html">Educator</a>
           </div>
         </li>
 
         <li class="nav-item">
-          <a class="mynav-link nav-link" href="contact.html">Contact</a>
+          <a class="mynav-link nav-link active" href="contact.html">Contact</a>
         </li>
       </ul>
 
@@ -60,63 +62,73 @@
   </header>
   <div class='container mt-4 text-center'>
     <p class=''>Please send me a message using the form below. I will get back to you as soon as possible.</p>
-            <div class="message">
-                <p class="success-text">Thanks! Your message has been sent</p>
-            </div>
-            <div class="error-message">
-                <p class="success-text">Oops... this is awkward. Something's gone wrong</p>
-            </div>
-            <div class='contact-form'>
-                <form onsubmit="return sendMail(this);" method='POST'>
-
-                    <div class='form-group'>
-                        <label for="name"></label>
-                        <input class='form-control' type="text" id="name" name="name" placeholder='Name' required></div>
-
-
-                    <div class='form-group'>
-                        <label for="mail"></label>
-                        <input class='form-control' type="email" id="email" name="email" placeholder='Email' required></div>
-
-
-                    <div class='form-group'>
-                        <label for="msg"></label>
-                        <textarea class='form-control' id="message" name="message" placeholder='Message' required></textarea></div>
-
-                    <div class="button">
-                        <button class='btn btn-success' contact-page-btn' type="submit">Send Message</button></div>
-                </form>
-
-
-
-
-  </div>
-
-
-
-
-
-  <footer>
-    <div class='footer'>
-      <div>
-        <ul class='icon-list'>
-          <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
-          <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
-        </ul>
-      </div>
-
-      <p class='website-by'>
-        Website by <a href="http://lucywilson.me/">Lucy Wilson</a>
-      </p>
+    <div class="message">
+      <p class="success-text">Thanks! Your message has been sent</p>
     </div>
-  </footer>
+    <div class="error-message">
+      <p class="success-text">Oops... this is awkward. Something's gone wrong</p>
+    </div>
+    <div class='contact-form'>
+      <form onsubmit="return sendMail(this);" method='POST'>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <div class='form-group'>
+          <label for="name"></label>
+          <input class='form-control' type="text" id="name" name="name" placeholder='Name' required></div>
 
-  <script type="text/javascript" src="assets/sendEmail.js"></script>
+
+        <div class='form-group'>
+          <label for="mail"></label>
+          <input class='form-control' type="email" id="email" name="email" placeholder='Email' required></div>
+
+
+        <div class='form-group'>
+          <label for="msg"></label>
+          <textarea class='form-control' id="message" name="message" placeholder='Message' required></textarea></div>
+
+        <div class="button">
+          <button class='btn btn-success' contact-page-btn' type="submit">Send Message</button></div>
+      </form>
+
+
+
+
+    </div>
+
+
+
+
+
+    <footer>
+      <div class='footer'>
+        <div>
+          <ul class='icon-list'>
+            <li><a href="https://twitter.com/MrPatrickJohns" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/patrickjohnsmusic/" target="_blank"><i
+                  class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/patrick-johns-7884b02a/" target="_blank"><i
+                  class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://soundcloud.com/mywaymusicuk"><i class="fab fa-soundcloud" target="_blank"></i></a></li>
+            <li><a href="contact.html"><i class="fas fa-envelope"></i></a></li>
+          </ul>
+        </div>
+
+        <p class='website-by'>
+          Website by <a href="http://lucywilson.me/">Lucy Wilson</a>
+        </p>
+      </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+
+    <script type="text/javascript" src="assets/sendEmail.js"></script>
 
 </html>
