--- a/producer.html
+++ b/producer.html
@@ -154,10 +154,10 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col text-center">
-        <h2 class="subtitle text-center mt-4 mb-4">Producer credits include:</h2>
-        <ul class="plain-ul">
+    <div class="row justify-content-md-center">
+      <div class="col  col-md-auto">
+        <h2 class="subtitle mt-4 mb-4 text-center">Producer credits include:</h2>
+        <ul class="comp-ul text-left">
           <li>
             <a href="https://www.bbc.co.uk/programmes/b006tmr6">BBC Radio 3: Breakfast (2021–), with Petroc
               Trelawny</a>
@@ -287,16 +287,20 @@
     </div>
     <hr class="col-hr mt-4">
     <h2 class="subtitle mt-4 text-center ">Writing</h2>
-    <div class="container text-center mt-4">
-      <ul class="plain-ul">
-        <li>Scripts for numerous radio programmes: BBC Radio 2, BBC Radio 3, Scala Radio, Oman Classics</li>
-        <li>BBC Jazz Awards </li>
-        <li>Qantas Airways in-house jazz documentaries</li>
-        <li>ABM Records: Jazz inlay notes</li>
-        <li><a href="https://issuu.com/britishtrombonesociety/docs/the_trombonist_-_winter_2020">
-            Magazine articles for The Trombonist, Brass Herald, and Classic FM Magazine</a></li>
+    <div class="container text-left mt-4">
+      <div class="row justify-content-md-center">
+        <div class="col col-md-auto">
+          <ul class="comp-ul">
+            <li>Scripts for numerous radio programmes: BBC Radio 2, BBC Radio 3, Scala Radio, Oman Classics</li>
+            <li>BBC Jazz Awards </li>
+            <li>Qantas Airways in-house jazz documentaries</li>
+            <li>ABM Records: Jazz inlay notes</li>
+            <li><a href="https://issuu.com/britishtrombonesociety/docs/the_trombonist_-_winter_2020">
+                Magazine articles for The Trombonist, Brass Herald, and Classic FM Magazine</a></li>
 
-      </ul>
+          </ul>
+        </div>
+      </div>
     </div>
     <hr class="col-hr mt-4">
 
