--- a/performer.html
+++ b/performer.html
@@ -61,10 +61,10 @@
         BBC 1, ITV and Channel 4, as well as Radios 1, 2, 3, 4, 5 and 6, and in major London venues such as the Royal
         Festival Hall.
       </p>
-      <div class="row">
-        <div class="col text-center">
+      <div class="row justify-content-md-center">
+        <div class="col col-md-auto">
           <h2 class="subtitle text-center mt-4 mb-4">Arranging</h2>
-          <ul class="plain-ul">
+          <ul class="comp-ul text-left">
             <li>
               Large Brass Ensemble: soon to be published by Superbrass Publishing
             </li>
@@ -127,7 +127,7 @@
       <div class='col port-content mx-auto'>
 
         <h4 class='small-title'>Recent compositions include:</h4>
-        <ul class='comp-list'>
+        <ul class='comp-ul'>
           <li><strong>Mary Speaks:</strong> a cappella carol for SSA or TTB</li>
           <li><strong>In the Bleak Midwinter: </strong>carol for SA and piano</li>
           <li><strong>We Will Remember Them:</strong> Remembrance Day piece for SATB and orchestra (premiered in
