--- a/educator.html
+++ b/educator.html
@@ -82,8 +82,8 @@
         <div class="row">
           <div class='col port-content mx-auto'>
             <hr class="col-hr mt-4">
-            <h4 class='small-title'>Recent compositions include:</h4>
-            <ul class='comp-list'>
+            <h4 class='small-title'>Recent work includes:</h4>
+            <ul class='comp-ul'>
               <li><a href="https://youtu.be/6z6tyo7R3Ck">Music Teachers’ Association “Hibbins Lecture Series” (2021):
                   Jazz at Key Stage 5, co-presented with Alyn Shipton</a></li>
               <li><a href="https://www.musicedtechconference.co.uk/sessions">
