--- a/performer.html
+++ b/performer.html
@@ -96,11 +96,11 @@
                 You Been Gone</a> (recorded by Rainbow) for use as educational resources </a>
             </li>
           </ul>
-          <hr class="col-hr mt-4">
+
         </div>
 
       </div>
-      <div class="card-col mx-auto text-center">
+      <div class="card-col mx-auto text-center mt-4">
         <div class="card card-width quote-card  mx-auto">
           <div class="card-body">
             <blockquote class="card-title">
@@ -168,7 +168,7 @@
 
 
 
-          <ul class='comp-list'>
+          <ul class='comp-ul'>
             <li><a href='http://oompahbrass.com'>Oompah Brass</a>, the UK’s leading Oktoberfest band and leading
               exponents of Oompop, including two 5* sell-out shows at the Edinburgh Fringe </li>
             <li><a href="https://www.londonvegetableorchestra.com">London Vegetable Orchestra, playing 1st Butternut
